dinoco_tests/tests/dinoco/ui/fail/type_safe_find_wrong_projection.rs
#[path = "../common.rs"]
mod common;

use dinoco::find_many;

use common::{Team, User};

fn main() {
    let _ = find_many::<User>().select::<Team>();
}
